//
// Copyright (c) 2022 - Present. Blend Labs, Inc. All rights reserved
// Use of this source code is governed by a MIT license that can be found in the LICENSE file.
//

syntax = "proto3";
package v1;

option go_package = "golang.blend.com/sdk/grpcutil/calculator/v1";

service Calculator {
	rpc Add(Numbers) returns (Number) {}
	rpc AddStream(stream Number) returns (Number) {}
	rpc Subtract(Numbers) returns (Number) {}
	rpc SubtractStream(stream Number) returns (Number) {}
	rpc Multiply(Numbers) returns (Number) {}
	rpc MultiplyStream(stream Number) returns (Number) {}
	rpc Divide(Numbers) returns (Number) {}
	rpc DivideStream(stream Number) returns (Number) {}
}

message Numbers {
	repeated double Values = 1;
}

message Number {
	double value = 1;
}
